# data-tools

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
configs/: preprocess_nclt.yaml  split_nclt.yaml
scripts/nclt/: preprocess.py  train_val_test_split.py
singularity/: data_tools.def
src/data_tools/: __init__.py  filtering.py  split.py
src/data_tools/nclt/: __init__.py  image.py  pointcloud.py  preprocessor.py
