[tool.poetry]
name = "data-tools"
version = "0.1.0"
description = ""
authors = ["Alexander Melekhin <amelekhin96@gmail.com>"]
readme = "README.md"
packages = [{include = "data_tools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
flake8 = "^6.1.0"
black = "^23.9.1"
flake8-black = "^0.3.6"
isort = "^5.12.0"
flake8-isort = "^6.1.0"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
