[tool.poetry]
name = "data-tools"
version = "0.1.0"
description = ""
authors = ["Alexander Melekhin <amelekhin96@gmail.com>"]
readme = "README.md"
packages = [{include = "data_tools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
tqdm = "^4.66.1"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.2"
loguru = "^0.7.2"
hydra-core = "^1.3.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
flake8 = "^6.1.0"
black = "^23.9.1"
flake8-black = "^0.3.6"
isort = "^5.12.0"
flake8-isort = "^6.1.0"
flake8-pyproject = "^1.2.3"
pytest = "^7.4.3"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
